# drusniel-voxels

./: .gitignore  ASSET_DOWNLOAD_GUIDE.md  Cargo.toml  README.md  check.txt  check_detail.txt  check_err.txt  check_full.txt  check_now.txt  check_output.txt  check_output_2.txt  warnings.txt
.claude/: settings.local.json
assets/config/: ambient_occlusion.yaml  building_materials.yaml  cinematic.yaml  crop_rendering.yaml  prop_materials.yaml  terrain_materials.yaml
assets/models/: ASSET_INVENTORY.md  FREE_NATURE_ASSETS_GUIDE.md
assets/shaders/: blocky_terrain.wgsl  building.wgsl  grass.wgsl  props.wgsl  triplanar_terrain.wgsl
docs/: SIMPLE_MANUAL_GUIDE.md  asset-acquisition-checklist.md  avian-vs-bevy-rapier3d.md  bevy-0.17-post-processing.md  building-system-implementation-guide.md  building-system-plan.md  debugging_rabbit_textures.md  deep-voxel-terrain-system.md  free-nature-assets-download-guide.md  free-texture-sources-guide.md  grass-rendering-fix.md  grass-shader-fix.md  gravity_performance.md  multiplayer-connection.md  triplanar-shader-implementation.md
docs/building/: textures-for-constrution.md
scripts/: DOWNLOAD_STATUS.md  build_atlas.py  download-assets.ps1  download-guide-assets.ps1  download-nature-assets.ps1  organize-downloaded-assets.ps1
src/: chat.rs  debug_ui.rs  environment.rs  lib.rs  lib.rs:Zone.Identifier  main.rs  map.rs  menu.rs  network.rs
src/atmosphere/: config.rs  fog.rs  mod.rs
src/camera/: controller.rs  plugin.rs
src/entity/: mod.rs  rabbit.rs  wolf.rs
src/interaction/: mod.rs  palette.rs
src/particles/: mod.rs
src/physics/: layers.rs  (+3 more)
tests/: config_loader_tests.rs  world_coordinate_tests.rs
(+41 files in other folders)
