[package]
name = "voxel_builder"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17", features = ["dynamic_linking", "jpeg", "png"] }
bevy_mesh = "0.17"
bevy_shader = "0.17"
bevy_water = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
log = "0.4"
thiserror = "2.0"
fast-surface-nets = "0.2"
ndshape = "0.3"
bincode = "1.3"
bevy_egui = "0.38.1"
bevy-inspector-egui = "0.35.0"
bevy_hanabi = "0.17.0"

[dev-dependencies]
criterion = "0.5"
rstest = "0.22"
tempfile = "3.10"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
